--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <meta charset="UTF-8">
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
+<link rel="stylesheet" href="styles.css">
 <body>
 
-<img src="img_la.jpg" alt="LA" style="width:100%">
+<img src="me.jpg" alt="me" style="width:100%">
 
 <div class="">
  <h1>This is a Heading</h1>
  <p>This is a paragraph.</p>
  <p>This is another paragraph.</p>
+ <p>Consider trying out <a href="https://purecss.io/"> this library</a></p>
 </div>
 
 </body>
