--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <link rel="stylesheet" href="styles.css">
 <body>
 
-<img src="me.jpg" alt="me" style="width:100%">
+<img src="me.jpg" alt="me" style="width:60%">
 
-<div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
- <p>Consider trying out <a href="https://purecss.io/"> this library</a></p>
+<div class="content">
+ <h1>Hello Internet</h1>
+ <p>This is my personal website</p>
+ <p>It is a work in progress</p>
+ <p>Note to self: consider trying out <a href="https://purecss.io/"> this library</a></p>
 </div>
 
 </body>
