--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="styles.css">
 <body>
 
-<img src="me.jpg" alt="me" style="width:60%">
+<img src="me.jpg" alt="me">
 
 <div class="content">
  <h1>Hello Internet</h1>
